--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
-<layout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -17,51 +16,79 @@
                 android:id="@+id/background_img"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/bg1"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY"
+                android:src="@drawable/bg1" />
 
             <EditText
                 android:id="@+id/text_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
-                android:background="@null"
-                android:textStyle="bold"
                 android:layout_centerInParent="true"
+                android:background="@null"
+                android:fontFamily="@font/font4"
                 android:gravity="center"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"
                 android:hint="@string/what_s_on_your_mind"
-                />
+                android:inputType="textMultiLine"
+                android:textColor="@android:color/white"
+                android:textColorHint="@color/light_gray"
+                android:textSize="40sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/status_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:fontFamily="@font/font1"
+                android:textColor="@color/white"
+                android:textSize="40sp"
+                android:visibility="invisible" />
 
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/change_background"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/background_icon"
                 android:layout_above="@id/share_btn"
-                app:backgroundTint="@android:color/holo_red_light"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="25dp"
-                />
+                android:src="@drawable/background_icon"
+                app:backgroundTint="@android:color/holo_red_light" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/share_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_margin="25dp"
-                android:src="@drawable/send_icon"
                 android:layout_alignParentBottom="true"
-                />
+                android:layout_margin="25dp"
+                android:src="@drawable/send_icon" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:visibility="gone"
                 android:id="@+id/background_list"
-                android:layout_alignParentTop="true"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:visibility="gone" />
+
+            <ImageButton
+                android:id="@+id/change_color_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="20dp"
+                android:background="@null"
+                android:src="@drawable/color_icon" />
+
+            <ImageButton
+                android:id="@+id/change_font_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="20dp"
+                android:layout_toRightOf="@id/change_color_icon"
+                android:background="@null"
+                android:src="@drawable/font_icon" />
 
         </RelativeLayout>
 
