--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="10dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:backgroundTint="#006699"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    app:cardCornerRadius="10dp">
 
-    <androidx.cardview.widget.CardView
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/custom_img_card"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:cardCornerRadius="10dp"
-        android:layout_margin="0dp">
+        android:layout_margin="0dp"
+        app:cardCornerRadius="10dp">
 
         <ImageView
             android:id="@+id/custom_bg_iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:src="@drawable/bg1"
             android:scaleType="fitXY"
-            />
+            tools:src="@drawable/bg1" />
 
     </androidx.cardview.widget.CardView>
 
