--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,9 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:background="@null"
-                android:fontFamily="@font/font4"
+                android:fontFamily="@font/font1"
                 android:gravity="center"
+                android:textAlignment="center"
                 android:hint="@string/what_s_on_your_mind"
                 android:inputType="textMultiLine"
                 android:textColor="@android:color/white"
@@ -40,6 +41,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:fontFamily="@font/font1"
+                android:gravity="center"
+                android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="40sp"
                 android:visibility="invisible" />
